@@ -1,4 +1,7 @@
-$Id: CHANGES,v 1.44 2005/08/18 07:22:22 psavola Exp $
+$Id: CHANGES,v 1.45 2005/09/28 10:55:29 psavola Exp $
+
+09/28/2005	Add NEMO Basic support (RFC3961) and fix default
+		HomeAgentLifetime, from Ville Nuorvala.
 
 08/18/2005	Implement more robust timer handler, especially
 		because some Linux kernels don't seem to behave
